Bug 130794 - kf5: Keyboard input ignored
Summary: kf5: Keyboard input ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Linux (All)
: high major
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.0.0 target:6.4.2 target:6.3.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2020-02-20 07:18 UTC by Michael Weghorn
Modified: 2020-02-20 14:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2020-02-20 07:18:57 UTC
Description:
When using the kf5 VCL plugin, keyboard input is ignored unless e.g. the Orca screenreader is enabled.

This is a regression from the following commit:

commit 034f56015c1c7a61faede33fb5306f63b5585632
Author: Michael Weghorn <m.weghorn@posteo.de>
Date:   Mon Feb 17 10:38:15 2020 +0100

    tdf#126785 qt5: Ignore external QEvent::ShortcutOverride
    
    For some reason, an extra external QEvent::ShortcutOverride
    event is triggered when a key is pressed and e.g. the
    Orca screen reader is enabled, which would result in
    duplicated input when handled as key input event as well.
    
    Therefore, ignore those ShortcutOverride events that are
    "spontaneous", i.e. "the event originated outside the
    application (a system event)". [1]
    
    [1] https://doc.qt.io/qt-5/qevent.html#spontaneous
    
    Change-Id: Ibccacb69c31d4d7ebd512c704f0e4df978c5281f
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88852
    Tested-by: Jenkins
    Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

(I thought I had tested both cases...)

Steps to Reproduce:
1. make sure screenreader is disabled
2. start LO Writer in a KDE Plasma session (i.e. kf5 VCL plugin is used)
3. type some text

Actual Results:
No text appears

Expected Results:
Text should appear


Reproducible: Always


User Profile Reset: Yes



Additional Info:
-
Comment 1 Michael Weghorn 2020-02-20 07:20:08 UTC
Version:

Version: 7.0.0.0.alpha0+
Build ID: 83122add64ecbf0fd3ba30368d5d87bde3dac278
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: kf5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded

I'm looking at this.
Comment 2 Commit Notification 2020-02-20 09:40:29 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/69e708868f6046cada955a16bca966370ce3218a

tdf#130794 qt5: Actually, ignore non-spontaneous QEvent::ShortcutOverride

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2020-02-20 13:16:08 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/620c7ddea10649b03250cd07a050ce4e1935c7b5

tdf#130794 qt5: Actually, ignore non-spontaneous QEvent::ShortcutOverride

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-02-20 14:31:55 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/2bc83c9691701ffa486babc161e945b285a5d7f1

tdf#130794 qt5: Actually, ignore non-spontaneous QEvent::ShortcutOverride

It will be available in 6.3.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.